tests/miniJava/neg/006722_mutation.MiniJava
class java { public static while Main ( String [ ] java ) { { } } }
